fix(gtk): fix alignment issues with nautilus sidebar in gnome v50

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -4183,47 +4183,47 @@ stacksidebar row {
 placessidebar {
   background-color: transparent;
   background-image: linear-gradient(to right, #151519 40px, #191a1f 35px, #191a1f 36px, #191a1f 36px, #191a1f 99%, #191a1f 100%); }
-  placessidebar row {
-    padding: 2px 11px; }
-    placessidebar row.sidebar-row {
-      margin: 0;
-      border-radius: 0; }
-      placessidebar row.sidebar-row label {
-        color: #98abb2;
-        padding-left: 30px; }
-      placessidebar row.sidebar-row.sidebar-row .sidebarrow-icon {
-        color: #98abb2; }
-      placessidebar row.sidebar-row:hover {
-        transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-        color: rgba(0, 0, 0, 0.76);
+  placessidebar row.activatable {
+    padding: 2px 11px;
+    margin: 0;
+    border-radius: 0; }
+    placessidebar row.activatable label {
+      color: #98abb2;
+      padding-left: 30px; }
+    placessidebar row.activatable .sidebarrow-icon, placessidebar row.activatable image {
+      color: #98abb2; }
+    placessidebar row.activatable:hover {
+      transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+      color: rgba(0, 0, 0, 0.76);
+      background-color: transparent;
+      /*rgba(65,67,75,0.4); */
+      background-image: linear-gradient(to right, #1b232d 40px, #25262d 40px, #25262d 97%); }
+    placessidebar row.activatable:selected {
+      background-color: transparent;
+      background-image: linear-gradient(to right, #f7b922 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
+      placessidebar row.activatable:selected, placessidebar row.activatable:selected image {
+        color: #fff; }
+      placessidebar row.activatable:selected label {
+        color: #f7b922; }
+      placessidebar row.activatable:selected:backdrop {
+        color: #fefefe;
         background-color: transparent;
-        /*rgba(65,67,75,0.4); */
-        background-image: linear-gradient(to right, #1b232d 40px, #25262d 40px, #25262d 97%); }
-      placessidebar row.sidebar-row:selected {
-        color: #fff;
-        background-color: transparent;
-        background-image: linear-gradient(to right, #f7b922 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
-        placessidebar row.sidebar-row:selected label {
-          color: #f7b922; }
-        placessidebar row.sidebar-row:selected:backdrop {
-          color: #fefefe;
-          background-color: transparent;
-          background-image: linear-gradient(to right, rgba(247, 185, 34, 0.6) 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
-          placessidebar row.sidebar-row:selected:backdrop label {
-            color: rgba(247, 185, 34, 0.6); }
-        placessidebar row.sidebar-row:selected .sidebarrow-icon {
-          -gtk-icon-shadow: 0 1px rgba(255, 255, 255, 0.8);
-          color: inherit; }
-      placessidebar row.sidebar-row.sidebar-new-bookmark-row, placessidebar row.sidebar-row.sidebar-new-bookmark-row label, placessidebar row.sidebar-row.sidebar-new-bookmark-row .sidebar-icon {
-        color: #fadd00; }
-      placessidebar row.sidebar-row:drop(active):not(:disabled) {
-        box-shadow: inset 0 1px #71f79f, inset 0 -1px #71f79f; }
-        placessidebar row.sidebar-row:drop(active):not(:disabled), placessidebar row.sidebar-row:drop(active):not(:disabled) label, placessidebar row.sidebar-row:drop(active):not(:disabled) image {
-          color: #71f79f; }
-        placessidebar row.sidebar-row:drop(active):not(:disabled):selected {
-          background: #71f79f; }
-          placessidebar row.sidebar-row:drop(active):not(:disabled):selected, placessidebar row.sidebar-row:drop(active):not(:disabled):selected label, placessidebar row.sidebar-row:drop(active):not(:disabled):selected image {
-            color: #fefefe; }
+        background-image: linear-gradient(to right, rgba(247, 185, 34, 0.6) 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
+        placessidebar row.activatable:selected:backdrop label {
+          color: rgba(247, 185, 34, 0.6); }
+      placessidebar row.activatable:selected .sidebarrow-icon {
+        -gtk-icon-shadow: 0 1px rgba(255, 255, 255, 0.8);
+        color: inherit; }
+    placessidebar row.activatable.sidebar-new-bookmark-row, placessidebar row.activatable.sidebar-new-bookmark-row label, placessidebar row.activatable.sidebar-new-bookmark-row .sidebar-icon {
+      color: #fadd00; }
+    placessidebar row.activatable:drop(active):not(:disabled) {
+      box-shadow: inset 0 1px #71f79f, inset 0 -1px #71f79f; }
+      placessidebar row.activatable:drop(active):not(:disabled), placessidebar row.activatable:drop(active):not(:disabled) label, placessidebar row.activatable:drop(active):not(:disabled) image {
+        color: #71f79f; }
+      placessidebar row.activatable:drop(active):not(:disabled):selected {
+        background: #71f79f; }
+        placessidebar row.activatable:drop(active):not(:disabled):selected, placessidebar row.activatable:drop(active):not(:disabled):selected label, placessidebar row.activatable:drop(active):not(:disabled):selected image {
+          color: #fefefe; }
   placessidebar list {
     background-color: transparent; }
     placessidebar list:backdrop {
